# TemplateRepoCxx

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
